chore(dockerfile): add build stage