@@ -1,4 +1,18 @@
-FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
-COPY target/ReportingOrgsEnrollment-0.0.1.jar app.jar
+#
+# Build stage
+#
+FROM maven:3.8.2-openjdk-16 AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+COPY openapi.properties /home/app
+RUN mvn -f /home/app/pom.xml clean package
+
+#
+# Package stage
+#
+FROM adoptopenjdk/openjdk16:alpine
+COPY --from=build /home/app/target/ReportingOrgsEnrollment-*.jar /usr/local/lib/app.jar
+
 EXPOSE 8080
-CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar app.jar
+
+ENTRYPOINT ["java","-jar","/usr/local/lib/app.jar"]
